@@ -1,20 +1,67 @@
 package eu.griddigit.cimpal.main.application.controllers;
 
+import eu.griddigit.cimpal.core.interfaces.ShaclAutoTesterCallback;
+import eu.griddigit.cimpal.core.shacl_tools.ShaclAutoTester;
 import eu.griddigit.cimpal.core.utils.CompleteDatatypeMapLoader;
 import eu.griddigit.cimpal.core.utils.ValidationTools;
+import eu.griddigit.cimpal.core.utils.ValidationEngine;
+import eu.griddigit.cimpal.main.application.MainController;
+import eu.griddigit.cimpal.main.gui.BaseUriPresets;
+import eu.griddigit.cimpal.main.gui.GUIhelper;
+import eu.griddigit.cimpal.main.gui.PathMemory;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
+import javafx.scene.Node;
 import javafx.scene.control.*;
-import javafx.util.Duration;
+import javafx.scene.layout.HBox;
 import org.apache.jena.datatypes.RDFDatatype;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.FileVisitOption;
+import java.nio.file.FileVisitResult;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.SimpleFileVisitor;
+import java.nio.file.attribute.BasicFileAttributes;
+import java.util.ArrayList;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
+/**
+ * Controller for the <em>Dataset SHACL Validation</em> tab.
+ * <p>
+ * The tab offers three workflows, selected by the {@code Validation workflow} choice box:
+ * two mapping-driven ones that resolve constraint files from a mapping CSV, and
+ * {@code Validate by manual selection}, which validates every model found under the models
+ * root folder against constraint files chosen by hand. The last was previously the separate
+ * <em>SHACL tester</em> tab; it is a third workflow here rather than a tab of its own because
+ * it shares the models root folder with the mapping workflows.
+ */
 public class ValidationByMappingController {
+
+    private static final Logger LOG = LoggerFactory.getLogger(ValidationByMappingController.class);
+
+    /** Choice-box label for the manual workflow, formerly the SHACL tester tab. */
+    private static final String WORKFLOW_MAPPING = "Validate by mapping file";
+    private static final String WORKFLOW_TIMESTAMPED = "Validate by timestamped mapping";
+    private static final String WORKFLOW_MANUAL = "Validate by manual selection";
+
+    /** Depth used when discovering model archives under the models root folder. */
+    private static final int MODEL_SCAN_DEPTH = 3;
+
+    /** Shared label for the "supply your own" entry of the datatype map dropdown. */
+    private static final String OTHER = BaseUriPresets.OTHER;
+
+    private static final String DATATYPE_MAP_CGMES30_NC25 = "CGMES 3.0 / NC 2.5";
+    private static final String DATATYPE_MAP_CGMES30_NC24 = "CGMES 3.0 / NC 2.4";
+    private static final String DATATYPE_MAP_CGMES24_NC22 = "CGMES 2.4 / NC 2.2";
+
+
+    private MainController mainController;
 
     @FXML
     private ChoiceBox<String> cbValidationWorkflow;
@@ -34,11 +81,24 @@ public class ValidationByMappingController {
     @FXML
     private ChoiceBox<String> cbDatatypeMap;
 
+    /** Shown only when the datatype map choice is "Other". */
+    @FXML
+    private TextField tfDatatypeMapFile;
+
+    @FXML
+    private Button btnBrowseDatatypeMapFile;
+
+    @FXML
+    private ChoiceBox<String> cbBaseUri;
+
     @FXML
     private TextField tfXmlBaseUri;
 
     // Previous-run comparison CSV (header: region,dataset,total).
-    // Only used by the timestamped workflow; disabled otherwise.
+    // Only used by the timestamped workflow; hidden otherwise.
+    @FXML
+    private HBox rowPreviousComparisonCsvLabel;
+
     @FXML
     private TextField tfPreviousComparisonCsv;
 
@@ -46,7 +106,16 @@ public class ValidationByMappingController {
     private Button btnBrowsePreviousComparisonCsv;
 
     @FXML
-    private ProgressBar pbValidationByMapping;
+    private Button btnBrowseMappingCsv;
+
+    @FXML
+    private Button btnBrowseConstraintsRootFolder;
+
+    @FXML
+    private Button btnBrowseOutputFolder;
+
+    @FXML
+    private Button btnRegenerateComparison;
 
     @FXML
     private Button btnRunValidationByMapping;
@@ -75,117 +144,381 @@ public class ValidationByMappingController {
     @FXML
     private Label helpPreviousComparisonCsv;
 
+    @FXML
+    private HBox rowValidationEngineLabel;
+
+    @FXML
+    private ChoiceBox<ValidationEngine> cbValidationEngine;
+
+    @FXML
+    private Label helpValidationEngine;
+
+    @FXML
+    private HBox rowValidationWorkersLabel;
+
+    @FXML
+    private ChoiceBox<String> cbValidationWorkers;
+
+    @FXML
+    private Label helpValidationWorkers;
+
+    @FXML
+    private HBox rowLimitValidationResults;
+
+    @FXML
+    private CheckBox cbLimitValidationResults;
+
+    @FXML
+    private Label helpLimitValidationResults;
+
+    @FXML
+    private HBox rowValidationDebug;
+
+    @FXML
+    private CheckBox cbValidationDebug;
+
+    @FXML
+    private Label helpValidationDebug;
+
+    // ---- manual-selection workflow controls, formerly the SHACL tester tab ----
+    @FXML
+    private HBox rowShaclConstraintFilesLabel;
+
+    @FXML
+    private TextField tfShaclConstraintFiles;
+
+    @FXML
+    private Button btnBrowseShaclConstraintFiles;
+
+    @FXML
+    private Label helpShaclConstraintFiles;
+
+    @FXML
+    private CheckBox cbExportReportsTurtle;
+
+    @FXML
+    private Label helpExportReports;
+
     private File mappingCsvFile;
     private File modelsInputFolder;
     private File constraintsRootFolder;
     private File outputFolder;
     private File previousComparisonCsvFile;
+    private File datatypeMapFile;
+    private List<File> shaclConstraintFiles;
+
+    public void setMainController(MainController mainController) {
+        this.mainController = mainController;
+    }
+
+    /** Progress goes to the shared bar in the status line, as it does from every other tab. */
+    private void setProgress(double progress) {
+        if (mainController != null) {
+            mainController.setProgressBarValue(progress);
+        }
+    }
+
+    private void resetProgress() {
+        if (mainController != null) {
+            mainController.resetProgressBar();
+        }
+    }
 
     @FXML
     private void initialize() {
         cbValidationWorkflow.getItems().setAll(
-                "Validate by mapping file",
-                "Validate by timestamped mapping"
+                WORKFLOW_MAPPING,
+                WORKFLOW_TIMESTAMPED,
+                WORKFLOW_MANUAL
         );
-        cbValidationWorkflow.getSelectionModel().select("Validate by mapping file");
+        cbValidationWorkflow.getSelectionModel().select(WORKFLOW_MAPPING);
+
+        cbValidationEngine.getItems().setAll(ValidationEngine.values());
+        cbValidationEngine.getSelectionModel().select(ValidationEngine.APACHE_JENA);
+        if (cbValidationDebug != null) {
+            cbValidationDebug.setSelected(false);
+        }
+
+        int maximumWorkers = Math.max(1, Runtime.getRuntime().availableProcessors() - 1);
+        cbValidationWorkers.getItems().add("Auto (memory-aware)");
+        for (int workerCount = 1; workerCount <= maximumWorkers; workerCount++) {
+            cbValidationWorkers.getItems().add(Integer.toString(workerCount));
+        }
+        cbValidationWorkers.getSelectionModel().selectFirst();
 
         cbDatatypeMap.getItems().setAll(
-                "CGMES 3.0 / NC 2.4",
-                "CGMES 2.4 / NC 2.2"
+                DATATYPE_MAP_CGMES30_NC25,
+                DATATYPE_MAP_CGMES30_NC24,
+                DATATYPE_MAP_CGMES24_NC22,
+                OTHER
         );
-        cbDatatypeMap.getSelectionModel().select("CGMES 3.0 / NC 2.4");
+        cbDatatypeMap.getSelectionModel().select(DATATYPE_MAP_CGMES30_NC25);
+        cbDatatypeMap.getSelectionModel().selectedItemProperty()
+                .addListener((obs, oldVal, newVal) -> updateDatatypeMapControls());
+        updateDatatypeMapControls();
 
-        tfXmlBaseUri.setText("http://iec.ch/TC57/CIM100");
+        BaseUriPresets.bind(cbBaseUri, tfXmlBaseUri, BaseUriPresets.DEFAULT_SELECTION);
 
-        pbValidationByMapping.setProgress(0);
+        resetProgress();
 
-        // Enable the previous-run CSV field only for the timestamped workflow.
+        // Each workflow uses a different subset of the form; re-evaluate on every change.
         cbValidationWorkflow.getSelectionModel().selectedItemProperty()
-                .addListener((obs, oldVal, newVal) -> updatePreviousComparisonEnabled());
-        updatePreviousComparisonEnabled();
+                .addListener((obs, oldVal, newVal) -> updateWorkflowControls());
+        updateWorkflowControls();
 
         initializeHelpTooltips();
+        restoreRememberedPaths();
+        restoreRememberedSettings();
     }
 
-    private void updatePreviousComparisonEnabled() {
-        boolean timestamped = isTimestampedWorkflow();
-        if (tfPreviousComparisonCsv != null) {
-            tfPreviousComparisonCsv.setDisable(!timestamped);
+    /**
+     * Restores the paths this tab was last used with. The consumers repeat whatever the Browse
+     * handler does besides filling the field, so a restored path leaves the tab in the same state
+     * as a fresh selection would.
+     * <p>
+     * These binds used to sit inside a private installHelpTooltip clone, so they were re-run on
+     * each of the nine tooltip installs; they belong here, and run once.
+     */
+    private void restoreRememberedPaths() {
+        PathMemory.bind(tfMappingCsvFile, "tab.validationByMapping.mappingCsv",
+                file -> mappingCsvFile = file);
+        PathMemory.bind(tfModelsInputFolder, "tab.validationByMapping.modelsInput",
+                folder -> {
+                    modelsInputFolder = folder;
+                });
+        PathMemory.bind(tfConstraintsRootFolder, "tab.validationByMapping.constraintsRoot",
+                folder -> constraintsRootFolder = folder);
+        PathMemory.bind(tfOutputFolder, "tab.validationByMapping.outputFolder",
+                folder -> outputFolder = folder);
+        PathMemory.bind(tfPreviousComparisonCsv, "tab.validationByMapping.previousComparisonCsv",
+                file -> previousComparisonCsvFile = file);
+        PathMemory.bind(tfDatatypeMapFile, "tab.validationByMapping.datatypeMap",
+                file -> datatypeMapFile = file);
+    }
+
+    /**
+     * Restores ChoiceBox selections and the custom base-URI field. Runs after path restore so
+     * the workflow controls reflect the saved state immediately. Listeners are added here (not
+     * in initialize) so that the initial programmatic selections do not trigger premature saves.
+     */
+    private void restoreRememberedSettings() {
+        // Validation workflow
+        String savedWorkflow = PathMemory.recallValue("tab.validationByMapping.workflow", null);
+        if (savedWorkflow != null && cbValidationWorkflow.getItems().contains(savedWorkflow)) {
+            cbValidationWorkflow.getSelectionModel().select(savedWorkflow);
         }
-        if (btnBrowsePreviousComparisonCsv != null) {
-            btnBrowsePreviousComparisonCsv.setDisable(!timestamped);
+        cbValidationWorkflow.getSelectionModel().selectedItemProperty().addListener(
+                (obs, oldVal, newVal) -> PathMemory.rememberValue(
+                        "tab.validationByMapping.workflow", newVal));
+
+        // Datatype map
+        String savedDatatypeMap = PathMemory.recallValue("tab.validationByMapping.datatypeMapChoice", null);
+        if (savedDatatypeMap != null && cbDatatypeMap.getItems().contains(savedDatatypeMap)) {
+            cbDatatypeMap.getSelectionModel().select(savedDatatypeMap);
+        }
+        cbDatatypeMap.getSelectionModel().selectedItemProperty().addListener(
+                (obs, oldVal, newVal) -> PathMemory.rememberValue(
+                        "tab.validationByMapping.datatypeMapChoice", newVal));
+
+        // Base URI preset choice
+        String savedBaseUri = PathMemory.recallValue("tab.validationByMapping.baseUriChoice", null);
+        if (savedBaseUri != null && cbBaseUri.getItems().contains(savedBaseUri)) {
+            cbBaseUri.getSelectionModel().select(savedBaseUri);
+        }
+        cbBaseUri.getSelectionModel().selectedItemProperty().addListener(
+                (obs, oldVal, newVal) -> PathMemory.rememberValue(
+                        "tab.validationByMapping.baseUriChoice", newVal));
+
+        // Custom base URI text (only meaningful when "Other" is selected)
+        String savedBaseUriText = PathMemory.recallValue("tab.validationByMapping.baseUriText", null);
+        if (savedBaseUriText != null && !savedBaseUriText.isBlank()) {
+            tfXmlBaseUri.setText(savedBaseUriText);
+        }
+        tfXmlBaseUri.textProperty().addListener((obs, oldVal, newVal) ->
+                PathMemory.rememberValue("tab.validationByMapping.baseUriText",
+                        newVal == null ? "" : newVal));
+    }
+
+    /** Reveals the file field and Browse button only for the "Other" datatype map. */
+    private void updateDatatypeMapControls() {
+        setShown(isOtherDatatypeMap(), tfDatatypeMapFile, btnBrowseDatatypeMapFile);
+    }
+
+    /**
+     * Enables the fields the selected workflow actually reads, and disables or hides the rest.
+     * <p>
+     * The two mapping workflows resolve their constraint files from the mapping CSV, so the
+     * manual constraint-files row does not apply to them; the manual workflow reads neither the
+     * mapping CSV nor the constraints root or output folder, so those are disabled in turn.
+     * Without this, {@link #validateInputs()} would demand a mapping CSV for a run that never
+     * looks at one.
+     * <p>
+     * The datatype map and base URI are read by all three workflows: the manual one loads its
+     * models through the same datatype-mapping parser, so an untyped load there would let a
+     * numeric or boolean constraint pass a model it should reject.
+     */
+    private void updateWorkflowControls() {
+        boolean timestamped = isTimestampedWorkflow();
+        boolean manual = isManualWorkflow();
+
+        // Previous-run comparison CSV and Regenerate button: timestamped workflow only.
+        setShown(timestamped, rowPreviousComparisonCsvLabel, tfPreviousComparisonCsv,
+                btnBrowsePreviousComparisonCsv, btnRegenerateComparison);
+        setShown(!manual, rowValidationEngineLabel, cbValidationEngine);
+        setShown(true, rowValidationWorkersLabel, cbValidationWorkers,
+                rowLimitValidationResults, rowValidationDebug);
+
+        // Manual constraint file selection: manual workflow only.
+        setDisabled(!manual, rowShaclConstraintFilesLabel, tfShaclConstraintFiles,
+                btnBrowseShaclConstraintFiles);
+
+        // Mapping-driven inputs: not read by the manual workflow.
+        setDisabled(manual, tfMappingCsvFile, btnBrowseMappingCsv,
+                tfConstraintsRootFolder, btnBrowseConstraintsRootFolder,
+                tfOutputFolder, btnBrowseOutputFolder);
+
+    }
+
+    private static void setDisabled(boolean disabled, Node... nodes) {
+        for (Node node : nodes) {
+            if (node != null) {
+                node.setDisable(disabled);
+            }
+        }
+    }
+
+    /** Hides and unmanages, so a hidden node gives its space back instead of leaving a gap. */
+    private static void setShown(boolean shown, Node... nodes) {
+        for (Node node : nodes) {
+            if (node != null) {
+                node.setVisible(shown);
+                node.setManaged(shown);
+            }
         }
     }
 
     private void initializeHelpTooltips() {
-        installHelpTooltip(
+        GUIhelper.installHelpTooltip(
                 helpValidationWorkflow,
                 "Select which validation process should be executed.\n\n" +
                         "Validate by mapping file: validates the selected input model structure according to the mapping CSV and creates a validation report and ZIP files.\n\n" +
-                        "Validate by timestamped mapping: discovers timestamped input files and creates timestamp-based validation reports."
+                        "Validate by timestamped mapping: discovers timestamped input files and creates timestamp-based validation reports.\n\n" +
+                        "Validate by manual selection: validates every model archive found under the models root folder against the SHACL constraint files you select by hand, with no mapping file. Results are written to the Output pane."
         );
 
-        installHelpTooltip(
+        GUIhelper.installHelpTooltip(
+                helpShaclConstraintFiles,
+                "SHACL constraint files (.ttl) used to validate the models. Several files can be selected and are combined into one shapes graph.\n\n" +
+                        "Only used by the \"Validate by manual selection\" workflow; the mapping workflows resolve their constraint files from the mapping CSV instead."
+        );
+
+        GUIhelper.installHelpTooltip(
                 helpMappingCsvFile,
                 "CSV mapping file containing the XML input definitions and the SHACL constraint files.\n\n" +
-                        "Only .csv files are accepted."
+                        "Only .csv files are accepted.\n\n" +
+                        "Not used by the \"Validate by manual selection\" workflow."
         );
 
-        installHelpTooltip(
+        GUIhelper.installHelpTooltip(
                 helpModelsInputFolder,
                 "For normal mapping, select the models root folder.\n\n" +
-                        "For timestamped mapping, select the root folder containing timestamped XML or ZIP files."
+                        "For timestamped mapping, select the root folder containing timestamped XML or ZIP files.\n\n" +
+                        "For manual selection, this is the parent folder that is searched for model archives to validate."
         );
 
-        installHelpTooltip(
+        GUIhelper.installHelpTooltip(
+                helpExportReports,
+                "Saves the standard SHACL ValidationReport graph as a Turtle (.ttl) file for each validation result. " +
+                        "Turtle reports can be selected later in the AI Assistant for targeted explanations and repair proposals.\n\n" +
+                        "Applies to all validation workflows."
+        );
+
+        GUIhelper.installHelpTooltip(
                 helpConstraintsRootFolder,
                 "Root folder where the SHACL constraint files are located.\n\n" +
                         "The mapping file constraint paths are resolved relative to this folder."
         );
 
-        installHelpTooltip(
+        GUIhelper.installHelpTooltip(
                 helpOutputFolder,
                 "Folder where validation reports, timestamped summaries and generated ZIP files will be written."
         );
 
-        installHelpTooltip(
+        GUIhelper.installHelpTooltip(
                 helpDatatypeMap,
-                "Select the CGMES and NC version combination used to load the datatype mapping for validation.\n\n" +
+                "Select the CGMES and NC version combination used to load the datatype mapping for validation. " +
+                        "The map types the literals as the models are parsed, which is what lets a constraint on a " +
+                        "numeric range or a boolean value fire at all.\n\n" +
+                        "CGMES 3.0 / NC 2.5 uses the CIM17 / CGMES 3 / NC 2.5 datatype map.\n\n" +
                         "CGMES 3.0 / NC 2.4 uses the CIM17 / CGMES 3 / NC 2.4 datatype map.\n\n" +
-                        "CGMES 2.4 / NC 2.2 uses the CIM16 / CGMES 2.4 / NC 2.2 datatype map."
+                        "CGMES 2.4 / NC 2.2 uses the CIM16 / CGMES 2.4 / NC 2.2 datatype map.\n\n" +
+                        "Other reveals a Browse button for a .properties datatype map of your own, in the same " +
+                        "format as the bundled ones.\n\n" +
+                        "Used by all three workflows, the manual selection one included."
         );
 
-        installHelpTooltip(
+        GUIhelper.installHelpTooltip(
                 helpXmlBaseUri,
-                "Base URI used when loading RDF/XML files.\n\n" +
-                        "The default value is normally correct for CIM100 based profiles."
+                "Base URI used when loading RDF/XML files; relative URIs in the models are resolved against it.\n\n" +
+                        "Pick the namespace the dataset is based on from the dropdown and the field is filled and " +
+                        "locked, so a typo cannot silently produce a model whose subjects resolve nowhere.\n\n" +
+                        "Select Other to type a base URI that is not in the list."
         );
 
-        installHelpTooltip(
+        GUIhelper.installHelpTooltip(
                 helpPreviousComparisonCsv,
-                "Optional CSV holding the previous run's totals, used to build the comparison workbook.\n\n" +
-                        "Only available for the timestamped workflow.\n\n" +
-                        "Expected header: region,dataset,total  (total = warnings + infos + violations).\n\n" +
-                        "This is the same shape the comparison workbook emits, so each run's output can feed the next.\n\n" +
-                        "If left empty, the comparison is produced with an empty \"previous\" column."
+                "Optional XLSX holding the previous run's totals, used to build the comparison workbook.\n\n" +
+                        "Shown only for the timestamped workflow, the only one that produces a comparison.\n\n" +
+                        "Supply the validation_comparison__*.xlsx file produced by a previous run.\n\n" +
+                        "All date-time named sheets from that file are carried over into the new comparison workbook, " +
+                        "and the most recent one is used as the comparison baseline (\"Previous\" column in the charts).\n\n" +
+                        "If left empty, no historical data is included and the % distribution chart is produced without a delta chart."
+        );
+
+        GUIhelper.installHelpTooltip(
+                helpValidationEngine,
+                "Apache Jena is the default and production engine. It runs inside CimPal and is " +
+                        "validated against the supplied Coreso/QoCDC shape sets.\n\n" +
+                        "The three Python choices are experimental comparison engines. CimPal gives " +
+                        "them the same fully resolved shapes graph and datatype-enhanced data graph " +
+                        "through memory pipes, so they do not change the mapping combinations or write " +
+                        "ZIP/XML model data to disk.\n\n" +
+                        "pySHACL (RDFLib) uses RDFLib SPARQL. pySHACL + Oxigraph uses Oxigraph for " +
+                        "SPARQL acceleration. SHACL (Rust Python binding) uses the PyPI Rust binding. " +
+                        "Some supplied SPARQL constraints or shape-graph structures are not compatible " +
+                        "with these engines, and their results and timing must be compared to Jena.\n\n" +
+                        "Install Python options with: py -3 -m pip install \"pyshacl[oxigraph]\" shacl\n\n" +
+                        "In the mapping workflows, the 10-result sampling option interrupts Jena early. " +
+                        "Python engines complete their validation before CimPal applies the same report limit.");
+        GUIhelper.installHelpTooltip(
+                helpValidationWorkers,
+                "Number of independent model validations CimPal runs concurrently. Each worker " +
+                        "uses a separate combined data graph and can use a CPU core.\n\n" +
+                        "Auto sizes Jena workers from the Java heap: roughly one worker per 6 GB, " +
+                        "up to 8 timestamped or 12 normal mapping workers. Python engines default " +
+                        "to half those limits because every worker is a Python process with another " +
+                        "in-memory graph. Select a number explicitly to override Auto.\n\n" +
+                        "Increase gradually while observing memory use; selecting every available " +
+                        "core may exhaust memory before it improves throughput.");
+        GUIhelper.installHelpTooltip(
+                helpLimitValidationResults,
+                "When selected, CimPal retains at most 10 findings for each source shape, counting "
+                        + "violations, warnings and information results alike. The mapping workflows stop "
+                        + "Jena after that limit and mark affected validations as Partial, because checks "
+                        + "after the limit were not run. The manual-selection workflow applies the same "
+                        + "cap to its exported findings while retaining its complete pass/fail rule check.\n\n"
+                        + "Use this for quick investigation; clear it to run the complete validation."
+        );
+        GUIhelper.installHelpTooltip(
+                helpValidationDebug,
+                "Writes a detailed diagnostic log for the selected validation workflow. The log includes " +
+                        "the selected options, input loading, shape loading, validation and report-writing timings. " +
+                        "It is saved as cimpal_validation_debug.log in CimPal's per-user application-data folder.\n\n" +
+                        "Logging serializes worker events to one file, so leave it off for normal performance runs " +
+                        "and turn it on when investigating a slow run or an unexpected result."
         );
     }
 
-    private void installHelpTooltip(Label helpIcon, String text) {
-        if (helpIcon == null) {
-            return;
-        }
-
-        Tooltip tooltip = new Tooltip(text);
-        tooltip.setWrapText(true);
-        tooltip.setMaxWidth(450);
-
-        tooltip.setShowDelay(Duration.millis(300));
-        tooltip.setHideDelay(Duration.millis(200));
-        tooltip.setShowDuration(Duration.INDEFINITE);
-
-        Tooltip.install(helpIcon, tooltip);
-    }
 
     @FXML
     private void actionBrowseMappingCsv() {
@@ -193,17 +526,18 @@ public class ValidationByMappingController {
                 true,
                 "Validation mapping file",
                 List.of("*.csv"),
-                "Mapping file"
+                "Mapping file",
+                "tab.validationByMapping.mappingCsv"
         );
 
-        if (selected == null || selected.isEmpty() || selected.get(0) == null) {
+        if (selected == null || selected.isEmpty() || selected.getFirst() == null) {
             return;
         }
 
-        File selectedFile = selected.get(0);
+        File selectedFile = selected.getFirst();
 
         if (!selectedFile.getName().toLowerCase().endsWith(".csv")) {
-            showWarning(
+            GUIhelper.showWarning(
                     "Invalid mapping file",
                     "Please select a CSV mapping file."
             );
@@ -221,7 +555,8 @@ public class ValidationByMappingController {
         File selected = eu.griddigit.cimpal.main.util.ModelFactory.folderChooserCustom(
                 timestamped
                         ? "Select the timestamped input root folder"
-                        : "Select the models root folder"
+                        : "Select the models root folder",
+                "tab.validationByMapping.modelsInput"
         );
 
         if (selected == null) {
@@ -230,12 +565,45 @@ public class ValidationByMappingController {
 
         modelsInputFolder = selected;
         tfModelsInputFolder.setText(modelsInputFolder.getAbsolutePath());
+
+    }
+
+    /**
+     * Selects the constraint files for the manual workflow. Multi-select: the field shows the
+     * joined list and is not restored on restart, but the chooser reopens where it was last
+     * used. Keeps the SHACL tester's path-memory key so that folder survives the tab merge.
+     */
+    @FXML
+    private void actionBrowseShaclConstraintFiles() {
+        List<File> selected = eu.griddigit.cimpal.main.util.ModelFactory.fileChooserCustom(
+                false,
+                "SHACL Constraints file",
+                List.of("*.ttl", "*.rdf"),
+                "",
+                "tab.shaclTester.shaclFiles"
+        );
+
+        if (selected == null || selected.isEmpty()) {
+            return;
+        }
+
+        shaclConstraintFiles = selected;
+
+        StringBuilder paths = new StringBuilder();
+        for (File file : selected) {
+            if (!paths.isEmpty()) {
+                paths.append(", ");
+            }
+            paths.append(file.toString());
+        }
+        tfShaclConstraintFiles.setText(paths.toString());
     }
 
     @FXML
     private void actionBrowseConstraintsRootFolder() {
         File selected = eu.griddigit.cimpal.main.util.ModelFactory.folderChooserCustom(
-                "Select constraint's root folder"
+                "Select constraint's root folder",
+                "tab.validationByMapping.constraintsRoot"
         );
 
         if (selected == null) {
@@ -249,7 +617,8 @@ public class ValidationByMappingController {
     @FXML
     private void actionBrowseOutputFolder() {
         File selected = eu.griddigit.cimpal.main.util.ModelFactory.folderChooserCustom(
-                "Select the output folder of reports and zips"
+                "Select the output folder of reports and zips",
+                "tab.validationByMapping.outputFolder"
         );
 
         if (selected == null) {
@@ -260,25 +629,55 @@ public class ValidationByMappingController {
         tfOutputFolder.setText(outputFolder.getAbsolutePath());
     }
 
+    /** Selects a user-supplied datatype map. Only reachable while the choice is "Other". */
+    @FXML
+    private void actionBrowseDatatypeMapFile() {
+        List<File> selected = eu.griddigit.cimpal.main.util.ModelFactory.fileChooserCustom(
+                true,
+                "Datatype map",
+                List.of("*.properties"),
+                "Select a datatype map (.properties)",
+                "tab.validationByMapping.datatypeMap"
+        );
+
+        if (selected == null || selected.isEmpty() || selected.getFirst() == null) {
+            return;
+        }
+
+        File selectedFile = selected.getFirst();
+
+        if (!selectedFile.getName().toLowerCase().endsWith(".properties")) {
+            GUIhelper.showWarning(
+                    "Invalid datatype map",
+                    "Please select a .properties datatype map file."
+            );
+            return;
+        }
+
+        datatypeMapFile = selectedFile;
+        tfDatatypeMapFile.setText(datatypeMapFile.getAbsolutePath());
+    }
+
     @FXML
     private void actionBrowsePreviousComparisonCsv() {
         List<File> selected = eu.griddigit.cimpal.main.util.ModelFactory.fileChooserCustom(
                 true,
-                "Previous comparison CSV",
-                List.of("*.csv"),
-                "Previous comparison CSV"
+                "Previous comparison XLSX",
+                List.of("*.xlsx"),
+                "Previous comparison XLSX",
+                "tab.validationByMapping.previousComparisonCsv"
         );
 
-        if (selected == null || selected.isEmpty() || selected.get(0) == null) {
+        if (selected == null || selected.isEmpty() || selected.getFirst() == null) {
             return;
         }
 
-        File selectedFile = selected.get(0);
+        File selectedFile = selected.getFirst();
 
-        if (!selectedFile.getName().toLowerCase().endsWith(".csv")) {
-            showWarning(
+        if (!selectedFile.getName().toLowerCase().endsWith(".xlsx")) {
+            GUIhelper.showWarning(
                     "Invalid comparison file",
-                    "Please select a CSV file (header: region,dataset,total)."
+                    "Please select an XLSX file produced by a previous validation run."
             );
             return;
         }
@@ -290,53 +689,119 @@ public class ValidationByMappingController {
     }
 
     @FXML
+    private void actionRegenerateComparison() {
+        if (outputFolder == null) {
+            GUIhelper.showWarning("Missing output folder",
+                    "Please select the output folder that contains the previous run's reports.");
+            return;
+        }
+
+        Path previousComparisonPath = getPreviousComparisonCsvPath();
+
+        btnRegenerateComparison.setDisable(true);
+        btnRunValidationByMapping.setDisable(true);
+        setProgress(javafx.scene.control.ProgressIndicator.INDETERMINATE_PROGRESS);
+
+        File selectedOutputFolder = outputFolder;
+
+        new Thread(() -> {
+            try {
+                Path result = ValidationTools.regenerateComparisonXlsx(
+                        selectedOutputFolder.toPath(),
+                        previousComparisonPath
+                );
+
+                Platform.runLater(() -> {
+                    setProgress(1);
+                    btnRegenerateComparison.setDisable(false);
+                    btnRunValidationByMapping.setDisable(false);
+                    GUIhelper.showInfo("Comparison regenerated",
+                            "Comparison workbook written to:\n" + result);
+                });
+
+            } catch (IOException ex) {
+                LOG.error("Regenerate comparison failed", ex);
+
+                Platform.runLater(() -> {
+                    resetProgress();
+                    btnRegenerateComparison.setDisable(false);
+                    btnRunValidationByMapping.setDisable(false);
+                    GUIhelper.showError("Regeneration failed", ex.getMessage());
+                });
+            }
+        }, "regenerate-comparison-runner").start();
+    }
+
+    @FXML
     private void actionResetValidationByMapping() {
         mappingCsvFile = null;
         modelsInputFolder = null;
         constraintsRootFolder = null;
         outputFolder = null;
         previousComparisonCsvFile = null;
+        datatypeMapFile = null;
+        shaclConstraintFiles = null;
 
         tfMappingCsvFile.clear();
         tfModelsInputFolder.clear();
         tfConstraintsRootFolder.clear();
         tfOutputFolder.clear();
 
+        if (tfShaclConstraintFiles != null) {
+            tfShaclConstraintFiles.clear();
+        }
+
         if (tfPreviousComparisonCsv != null) {
             tfPreviousComparisonCsv.clear();
         }
 
-        cbValidationWorkflow.getSelectionModel().select("Validate by mapping file");
-        cbDatatypeMap.getSelectionModel().select("CGMES 3.0 / NC 2.4");
+        if (tfDatatypeMapFile != null) {
+            tfDatatypeMapFile.clear();
+        }
 
-        tfXmlBaseUri.setText("http://iec.ch/TC57/CIM100");
+        cbValidationWorkflow.getSelectionModel().select(WORKFLOW_MAPPING);
 
-        updatePreviousComparisonEnabled();
+        cbValidationEngine.getItems().setAll(ValidationEngine.values());
+        cbValidationEngine.getSelectionModel().select(ValidationEngine.APACHE_JENA);
+        cbDatatypeMap.getSelectionModel().select(DATATYPE_MAP_CGMES30_NC25);
+        cbBaseUri.getSelectionModel().select(BaseUriPresets.DEFAULT_SELECTION);
 
-        pbValidationByMapping.setProgress(0);
+        updateDatatypeMapControls();
+        updateWorkflowControls();
     }
 
     @FXML
     private void actionRunValidationByMapping() {
-        pbValidationByMapping.setProgress(0);
+        resetProgress();
 
         if (!validateInputs()) {
             return;
         }
 
+        ValidationTools.setValidationDebugEnabled(
+                cbValidationDebug != null && cbValidationDebug.isSelected());
+
+        if (isManualWorkflow()) {
+            runManualValidation();
+            return;
+        }
+
         boolean runTimestampedWorkflow = isTimestampedWorkflow();
-        String datatypeMapResource = getDatatypeMapResource();
-        String xmlBase = tfXmlBaseUri.getText() == null || tfXmlBaseUri.getText().isBlank()
-                ? "http://iec.ch/TC57/CIM100"
-                : tfXmlBaseUri.getText().trim();
+        DatatypeMapSource datatypeMapSource = getDatatypeMapSource();
+        String xmlBase = getBaseUri();
 
-        int threadCount = getThreadCount(runTimestampedWorkflow);
+        ValidationEngine validationEngine = cbValidationEngine == null
+                ? ValidationEngine.APACHE_JENA : cbValidationEngine.getValue();
+        int threadCount = getThreadCount(runTimestampedWorkflow, validationEngine);
 
-        // Only meaningful for the timestamped workflow; null when none selected.
+        // Only the timestamped workflow uses a previous comparison workbook.
         Path previousComparisonCsv = runTimestampedWorkflow ? getPreviousComparisonCsvPath() : null;
+        int maxResultsPerConstraint = cbLimitValidationResults != null
+                && cbLimitValidationResults.isSelected() ? 10 : 0;
+        ValidationTools.setExportTurtleValidationReports(cbExportReportsTurtle != null && cbExportReportsTurtle.isSelected());
 
         btnRunValidationByMapping.setDisable(true);
-        pbValidationByMapping.setProgress(ProgressIndicator.INDETERMINATE_PROGRESS);
+        setProgress(ProgressIndicator.INDETERMINATE_PROGRESS);
 
         File selectedMappingFile = mappingCsvFile;
         File selectedModelsInputFolder = modelsInputFolder;
@@ -345,11 +810,11 @@ public class ValidationByMappingController {
 
         new Thread(() -> {
             try {
-                Map<String, RDFDatatype> dataTypeMap =
-                        CompleteDatatypeMapLoader.loadFromResource(datatypeMapResource);
+                Map<String, RDFDatatype> dataTypeMap = datatypeMapSource.load();
 
                 if (runTimestampedWorkflow) {
-                    List<Path> reports = ValidationTools.validateByTimestampedMapping(
+                    ValidationTools.ValidationTimestampedRunSummary tsResult =
+                            ValidationTools.validateByTimestampedMapping(
                             selectedMappingFile.toPath(),
                             selectedModelsInputFolder.toPath(),
                             selectedConstraintsRootFolder.toPath(),
@@ -357,8 +822,11 @@ public class ValidationByMappingController {
                             threadCount,
                             dataTypeMap,
                             xmlBase,
-                            previousComparisonCsv
+                            previousComparisonCsv,
+                            maxResultsPerConstraint,
+                            validationEngine
                     );
+                    List<Path> reports = tsResult.reports();
 
                     System.out.println("Created report count: " + reports.size());
                     for (Path report : reports) {
@@ -366,15 +834,18 @@ public class ValidationByMappingController {
                     }
 
                 } else {
-                    Path report = ValidationTools.validateByMapping(
+                    ValidationTools.ValidationRunSummary result = ValidationTools.validateByMapping(
                             selectedMappingFile.toPath(),
                             selectedModelsInputFolder.toPath(),
                             selectedConstraintsRootFolder.toPath(),
                             selectedOutputFolder.toPath(),
                             threadCount,
                             dataTypeMap,
-                            xmlBase
+                            xmlBase,
+                            maxResultsPerConstraint,
+                            validationEngine
                     );
+                    Path report = result.reportPath();
 
                     System.out.println("Report saved to: " + report);
 
@@ -391,65 +862,205 @@ public class ValidationByMappingController {
                 }
 
                 Platform.runLater(() -> {
-                    pbValidationByMapping.setProgress(1);
+                    setProgress(1);
                     btnRunValidationByMapping.setDisable(false);
-                    showInfo("Validation finished", "Validation report generation finished.");
+                    GUIhelper.showInfo("Validation finished", "Validation report generation finished.");
                 });
 
             } catch (IOException ex) {
-                ex.printStackTrace();
+                LOG.error("Unhandled exception", ex);
 
                 Platform.runLater(() -> {
-                    pbValidationByMapping.setProgress(0);
+                    resetProgress();
                     btnRunValidationByMapping.setDisable(false);
-                    showError("Validation failed", ex.getMessage());
+                    GUIhelper.showError("Validation failed", ex.getMessage());
                 });
 
             } catch (Exception ex) {
-                ex.printStackTrace();
+                LOG.error("Unhandled exception", ex);
 
                 Platform.runLater(() -> {
-                    pbValidationByMapping.setProgress(0);
+                    resetProgress();
                     btnRunValidationByMapping.setDisable(false);
-                    showError("Validation failed", ex.getMessage());
+                    GUIhelper.showError("Validation failed", ex.getMessage());
                 });
             }
         }, "validation-by-mapping-runner").start();
     }
 
+    /**
+     * Runs the manual workflow: discovers model archives under the models root folder and
+     * validates them against the hand-picked constraint files.
+     * <p>
+     * Carried over from the SHACL tester tab, with the models root folder standing in for
+     * that tab's separate "Parent folder for test models" field. Progress and per-model
+     * output go to the shared progress bar and the Output pane, as they did before.
+     */
+    private void runManualValidation() {
+        File selectedModelsFolder = modelsInputFolder;
+        List<File> selectedConstraintFiles = shaclConstraintFiles;
+        // Manual validation has historically created its Excel reports by default; retain
+        // that behaviour while exposing Turtle as the single optional report format.
+        boolean exportReports = true;
+        boolean exportTurtleReports = cbExportReportsTurtle != null && cbExportReportsTurtle.isSelected();
+        DatatypeMapSource datatypeMapSource = getDatatypeMapSource();
+        String xmlBase = getBaseUri();
+        int workerCount = getThreadCount(false, ValidationEngine.APACHE_JENA);
+        int maxResultsPerConstraint = cbLimitValidationResults != null
+                && cbLimitValidationResults.isSelected() ? 10 : 0;
+
+        List<File> archives = new ArrayList<>();
+        try {
+            Files.walkFileTree(selectedModelsFolder.toPath(), EnumSet.noneOf(FileVisitOption.class),
+                    MODEL_SCAN_DEPTH, new SimpleFileVisitor<>() {
+                        @Override
+                        public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
+                            if (file.toString().endsWith(".zip")) {
+                                archives.add(file.toFile());
+                            }
+                            return FileVisitResult.CONTINUE;
+                        }
+                    });
+        } catch (IOException e) {
+            GUIhelper.showUserFriendlyError("Error while searching for files",
+                    "An error occurred while searching for models in the selected folder.", e);
+            resetProgress();
+            return;
+        }
+
+        if (archives.isEmpty()) {
+            GUIhelper.showWarning("No models found",
+                    "No model archives (.zip) were found under the selected models root folder.");
+            resetProgress();
+            return;
+        }
+
+        btnRunValidationByMapping.setDisable(true);
+        setProgress(ProgressIndicator.INDETERMINATE_PROGRESS);
+
+        new Thread(() -> {
+            try {
+                ShaclAutoTester tester = new ShaclAutoTester(new ShaclAutoTesterCallback() {
+                    @Override
+                    public void updateProgress(double progress) {
+                        // setProgress already marshals onto the FX thread.
+                        setProgress(progress);
+                    }
+
+                    @Override
+                    public void appendOutput(String message) {
+                        if (mainController != null) {
+                            mainController.appendText(message);
+                        }
+                    }
+                });
+
+                // Same datatype mapping the mapping-driven workflows use, so a numeric or boolean
+                // constraint is evaluated against typed literals here too.
+                tester.setDatatypeMapping(datatypeMapSource.load(), xmlBase);
+                tester.setValidationOptions(workerCount, maxResultsPerConstraint);
+                ValidationTools.startValidationDebugRun("manual SHACL validation workers=" + workerCount
+                        + " resultLimit=" + maxResultsPerConstraint);
+
+                tester.runTestsInternal(selectedConstraintFiles, selectedModelsFolder, archives, exportReports, exportTurtleReports);
+
+                Platform.runLater(() -> {
+                    setProgress(1);
+                    btnRunValidationByMapping.setDisable(false);
+                    GUIhelper.showInfo("Validation finished",
+                            "Validated " + archives.size() + " model(s). See the Output pane for details.");
+                });
+
+            } catch (Exception ex) {
+                LOG.error("Manual SHACL validation failed", ex);
+
+                Platform.runLater(() -> {
+                    resetProgress();
+                    btnRunValidationByMapping.setDisable(false);
+                    GUIhelper.showError("Validation failed", ex.getMessage());
+                });
+            }
+        }, "manual-shacl-validation-runner").start();
+    }
+
     private boolean validateInputs() {
+        if (cbValidationWorkflow.getSelectionModel().getSelectedItem() == null) {
+            GUIhelper.showWarning("Missing workflow", "Please select a validation workflow.");
+            return false;
+        }
+
+        if (!validateDatatypeMap()) {
+            return false;
+        }
+
+        // The manual workflow reads the constraint files, the models root folder and - like the
+        // other two - the datatype map and base URI checked above.
+        if (isManualWorkflow()) {
+            if (shaclConstraintFiles == null || shaclConstraintFiles.isEmpty()) {
+                GUIhelper.showWarning("Missing constraint files",
+                        "Please select one or more SHACL constraint files (.ttl).");
+                return false;
+            }
+
+            if (modelsInputFolder == null) {
+                GUIhelper.showWarning("Missing models folder",
+                        "Please select the models root folder holding the models to validate.");
+                return false;
+            }
+
+            return true;
+        }
+
         if (mappingCsvFile == null) {
-            showWarning("Missing mapping file", "Please select a CSV mapping file.");
+            GUIhelper.showWarning("Missing mapping file", "Please select a CSV mapping file.");
             return false;
         }
 
         if (!mappingCsvFile.getName().toLowerCase().endsWith(".csv")) {
-            showWarning("Invalid mapping file", "The mapping file must be a CSV file.");
+            GUIhelper.showWarning("Invalid mapping file", "The mapping file must be a CSV file.");
             return false;
         }
 
         if (modelsInputFolder == null) {
-            showWarning("Missing input folder", "Please select the models or timestamped input root folder.");
+            GUIhelper.showWarning("Missing input folder", "Please select the models or timestamped input root folder.");
             return false;
         }
 
         if (constraintsRootFolder == null) {
-            showWarning("Missing constraints folder", "Please select the constraints root folder.");
+            GUIhelper.showWarning("Missing constraints folder", "Please select the constraints root folder.");
             return false;
         }
 
         if (outputFolder == null) {
-            showWarning("Missing output folder", "Please select the output folder.");
+            GUIhelper.showWarning("Missing output folder", "Please select the output folder.");
             return false;
         }
 
-        if (cbValidationWorkflow.getSelectionModel().getSelectedItem() == null) {
-            showWarning("Missing workflow", "Please select a validation workflow.");
-            return false;
-        }
+        return true;
+    }
 
+    /** Shared by all three workflows: every one of them loads its models through the map. */
+    private boolean validateDatatypeMap() {
         if (cbDatatypeMap.getSelectionModel().getSelectedItem() == null) {
-            showWarning("Missing datatype map", "Please select a datatype map.");
+            GUIhelper.showWarning("Missing datatype map", "Please select a datatype map.");
+            return false;
+        }
+
+        if (isOtherDatatypeMap()) {
+            if (datatypeMapFile == null) {
+                GUIhelper.showWarning("Missing datatype map file",
+                        "Datatype map is set to \"Other\". Please browse for a .properties datatype map.");
+                return false;
+            }
+            if (!datatypeMapFile.isFile()) {
+                GUIhelper.showWarning("Datatype map not found",
+                        "The selected datatype map no longer exists:\n" + datatypeMapFile.getAbsolutePath());
+                return false;
+            }
+        }
+
+        if (getBaseUri().isBlank()) {
+            GUIhelper.showWarning("Missing base URI", "Please select or enter a base URI.");
             return false;
         }
 
@@ -457,19 +1068,56 @@ public class ValidationByMappingController {
     }
 
     private boolean isTimestampedWorkflow() {
-        return "Validate by timestamped mapping".equals(
+        return WORKFLOW_TIMESTAMPED.equals(
                 cbValidationWorkflow.getSelectionModel().getSelectedItem()
         );
     }
 
-    private String getDatatypeMapResource() {
-        String selected = cbDatatypeMap.getSelectionModel().getSelectedItem();
+    private boolean isManualWorkflow() {
+        return WORKFLOW_MANUAL.equals(
+                cbValidationWorkflow.getSelectionModel().getSelectedItem()
+        );
+    }
 
-        return switch (selected) {
-            case "CGMES 2.4 / NC 2.2" -> "/CompleteDatatypeMap_CIM16_CGMES24_NC22.properties";
-            case "CGMES 3.0 / NC 2.4" -> "/CompleteDatatypeMap_CIM17_CGMES3_NC24.properties";
+    private boolean isOtherDatatypeMap() {
+        return OTHER.equals(cbDatatypeMap.getSelectionModel().getSelectedItem());
+    }
+
+    /**
+     * Where the datatype map is to be read from. Resolved on the FX thread so the choice cannot
+     * change under a running validation, but loaded on the worker thread - parsing a map is I/O.
+     */
+    private DatatypeMapSource getDatatypeMapSource() {
+        if (isOtherDatatypeMap()) {
+            return new DatatypeMapSource(null, datatypeMapFile);
+        }
+
+        String selected = cbDatatypeMap.getSelectionModel().getSelectedItem();
+        String resource = switch (selected) {
+            case DATATYPE_MAP_CGMES24_NC22 -> "/CompleteDatatypeMap_CIM16_CGMES24_NC22.properties";
+            case DATATYPE_MAP_CGMES30_NC24 -> "/CompleteDatatypeMap_CIM17_CGMES3_NC24.properties";
+            case DATATYPE_MAP_CGMES30_NC25 -> "/CompleteDatatypeMap_CIM17_CGMES3_NC25.properties";
             default -> throw new IllegalStateException("Unknown datatype map: " + selected);
         };
+        return new DatatypeMapSource(resource, null);
+    }
+
+    /** The base URI to parse models with, falling back to the default preset if the field is empty. */
+    private String getBaseUri() {
+        String text = tfXmlBaseUri.getText();
+        return text == null || text.isBlank() ? BaseUriPresets.defaultUri() : text.trim();
+    }
+
+    /**
+     * A bundled datatype map (by classpath resource) or one the user supplied (by file) -
+     * exactly one of the two is set.
+     */
+    private record DatatypeMapSource(String resourcePath, File file) {
+        Map<String, RDFDatatype> load() throws IOException {
+            return file != null
+                    ? CompleteDatatypeMapLoader.loadFromFile(file.toPath())
+                    : CompleteDatatypeMapLoader.loadFromResource(resourcePath);
+        }
     }
 
     /** Previous-run comparison CSV path, or null if none selected. */
@@ -486,37 +1134,30 @@ public class ValidationByMappingController {
         return null;
     }
 
-    private int getThreadCount(boolean timestampedWorkflow) {
-        int availableProcessors = Runtime.getRuntime().availableProcessors();
-
-        if (timestampedWorkflow) {
-            return Math.min(Math.max(1, availableProcessors - 1), 2);
+    private int getThreadCount(boolean timestampedWorkflow, ValidationEngine engine) {
+        String selection = cbValidationWorkers == null ? "Auto (memory-aware)" : cbValidationWorkers.getValue();
+        if (selection != null && !selection.startsWith("Auto")) {
+            try {
+                return Math.clamp(Integer.parseInt(selection), 1,
+                        Math.max(1, Runtime.getRuntime().availableProcessors() - 1));
+            } catch (NumberFormatException ignored) {
+                // Fall through to the resource-aware default.
+            }
         }
 
-        return Math.min(Math.max(1, availableProcessors - 1), 4);
+        // The core timestamped workflow needs to distinguish Auto from a user-selected worker
+        // count so it can divide its bounded budget between row and target-shape validation.
+        if (timestampedWorkflow) {
+            return 0;
+        }
+
+        int availableWorkers = Math.max(1, Runtime.getRuntime().availableProcessors() - 1);
+        long heapGiB = Math.max(1, Runtime.getRuntime().maxMemory() / (1024L * 1024L * 1024L));
+        int memoryWorkers = Math.max(1, (int) (heapGiB / 6));
+        int engineCap = engine == ValidationEngine.APACHE_JENA
+                ? (timestampedWorkflow ? 8 : 12)
+                : (timestampedWorkflow ? 4 : 6);
+        return Math.clamp(Math.min(availableWorkers, Math.min(memoryWorkers, engineCap)), 1, engineCap);
     }
 
-    private void showInfo(String title, String message) {
-        Alert alert = new Alert(Alert.AlertType.INFORMATION);
-        alert.setTitle(title);
-        alert.setHeaderText(title);
-        alert.setContentText(message == null ? "" : message);
-        alert.showAndWait();
-    }
-
-    private void showWarning(String title, String message) {
-        Alert alert = new Alert(Alert.AlertType.WARNING);
-        alert.setTitle(title);
-        alert.setHeaderText(title);
-        alert.setContentText(message == null ? "" : message);
-        alert.showAndWait();
-    }
-
-    private void showError(String title, String message) {
-        Alert alert = new Alert(Alert.AlertType.ERROR);
-        alert.setTitle(title);
-        alert.setHeaderText(title);
-        alert.setContentText(message == null ? "" : message);
-        alert.showAndWait();
-    }
 }
